deployments/playground/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground-web
  namespace: playground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playground
  template:
    metadata:
      labels:
        app: playground
    spec:
      securityContext:
        fsGroup: 101
      containers:
      - name: nginx
        image: nginx:stable
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-cache
          mountPath: /var/cache/nginx
      volumes:
      - name: nginx-cache
        emptyDir: {}
