deployments/playground/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground-svc
  namespace: playground
spec:
  type: ClusterIP
  selector:
    app: playground
  ports:
  - port: 80
    targetPort: 80
