deployments/playground/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: playground
  namespace: playground
spec:
  to:
    kind: Service
    name: playground-svc
  port:
    targetPort: https
  tls:
    termination: edge
